--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -76,6 +76,10 @@
   background-color: $base-black-font;
 }
 
+.about-company button:focus {
+  outline: 2px solid $base-blue;
+}
+
 .about-company__third-paragraph {
   display: block;
 
