--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -28,6 +28,10 @@
       line-height: 21px;
     }
 
+    &:focus {
+      outline: 2px solid #fff;
+    }
+
     width: 100%;
     background-color: $blue-input-background;
     color: $base-white-font;
@@ -53,6 +57,10 @@
     width: 265px;
     padding: 13px 25px;
     align-self: flex-start;
+
+    &:focus {
+      outline: 2px solid #fff;
+    }
   }
 
   @media (max-width: 1023px) {
@@ -142,6 +150,10 @@
     background-image: url("../img/sprite/checkbox.svg");
     background-repeat: no-repeat;
     background-position: center;
+  }
+
+  input:focus + span {
+    outline: 2px solid #fff;
   }
 
   @media (max-width: 767px) {
