--- a/source/sass/blocks/nav-section.scss
+++ b/source/sass/blocks/nav-section.scss
@@ -81,8 +81,14 @@
   font-size: 16px;
   line-height: 21px;
   color: $clipped-white;
+
   &:hover {
     color: $base-blue;
+  }
+
+
+  &:focus {
+    outline: 2px solid #fff;
   }
 
   @media (max-width: 767px) {
