--- a/source/sass/blocks/nav-section.scss
+++ b/source/sass/blocks/nav-section.scss
@@ -7,7 +7,6 @@
   }
 
   @media (max-width: 767px) {
-    padding: 20px 25px;
     border-top: 1px solid rgba(248, 253, 255, 0.7);
     border-bottom: 1px solid rgba(248, 253, 255, 0.7);
   }
@@ -25,6 +24,7 @@
   }
 
   @media (max-width: 767px) {
+    padding: 20px 25px;
     margin-bottom: 0;
   }
 }
@@ -86,7 +86,6 @@
     color: $base-blue;
   }
 
-
   &:focus {
     outline: 2px solid #fff;
   }
@@ -103,13 +102,13 @@
 
   @media (max-width: 767px) {
     display: none;
-    padding-top: 15px;
 
     &--is-open {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       gap: 10px;
+      padding: 0 25px 20px 25px;
     }
   }
 }
