--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -1,7 +1,7 @@
 .popup {
   display: none;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
@@ -9,39 +9,50 @@
   z-index: 11;
   justify-content: center;
   align-items: center;
+  overflow-y: scroll;
+  overflow-x: hidden;
 
   h2 {
-    font-size: 36px;
-    line-height: 51px;
-    margin-bottom: 10px;
+    font-size: 30px;
+    line-height: 42px;
     font-family: "Roboto Condensed", "Arial", sans-serif;
     font-weight: 400;
     color: $color-default-white;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
 
   p {
     font-size: 16px;
     line-height: 21px;
-    margin-bottom: 25px;
+    margin-bottom: 40px;
     color: $color-default-white;
   }
 
-  .feedback-form__checkbox-wrapper {
-    grid-area: 4/1/4/-1;
-  }
-
-  form > button {
-    grid-area: 3/1/3/-1;
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
     width: 100%;
-  }
 
-  .feedback-form__question-wrapper {
-    margin-bottom: 0;
+    & button {
+      width: 100%;
+    }
   }
 
   &--is-open {
     display: flex;
+  }
+
+  .feedback-form__name-wrapper,
+  .feedback-form__phone-wrapper,
+  .feedback-form__question-wrapper {
+    width: 100%;
+  }
+
+  .feedback-form__question-wrapper {
+    margin-bottom: 5px;
+    height: 155px;
   }
 }
 
@@ -52,21 +63,6 @@
   background-color: $base-blue;
   border-radius: 3px;
   padding: 40px;
-}
-
-.popup__title {
-  font-family: "Roboto Condensed", "Arial", sans-serif;
-  color: $color-default-white;
-  font-size: 30px;
-  margin-bottom: 15px;
-  font-weight: 400;
-}
-
-.popup__description {
-  color: $color-default-white;
-  font-size: 16px;
-  line-height: 21px;
-  margin-bottom: 40px;
 }
 
 .popup__button-close {
