--- a/source/sass/blocks/contacts-section.scss
+++ b/source/sass/blocks/contacts-section.scss
@@ -1,6 +1,11 @@
 .contacts-section {
   border: none;
   padding: 0;
+  padding-top: 8px;
+
+  @media (max-width: 1023px) {
+    padding-top: 0;
+  }
 
   @media (max-width: 767px) {
     border-bottom: 1px solid rgba(248, 253, 255, 0.7);
@@ -92,7 +97,7 @@
   padding-top: 0;
   flex-direction: column;
   justify-content: space-between;
-  gap: 10px;
+  gap: 5px;
 
   @media (max-width: 1023px) {
     gap: 5px;
