--- a/source/sass/blocks/social-links.scss
+++ b/source/sass/blocks/social-links.scss
@@ -1,6 +1,7 @@
 .social-links {
-  width: 150px;
   margin: 0 auto;
+  width: 100%;
+  padding-left: 10px;
 
   @media (min-width: 768px) {
     margin: 0;
