--- a/source/sass/blocks/benefit-item.scss
+++ b/source/sass/blocks/benefit-item.scss
@@ -50,10 +50,14 @@
   @media (max-width: 1023px) {
     min-width: 100%;
     max-height: 360px;
+
+    h2 {
+      margin-bottom: 10px;
+    }
   }
 
   @media (max-width: 767px) {
-    padding: 30px 30px 65px 30px;
+    padding: 25px 30px 70px 30px;
     min-height: 325px;
 
     h2 {
@@ -75,9 +79,13 @@
   fill: $base-blue;
   margin-bottom: 13px;
 
+  @media (max-width: 1023px) {
+    margin-bottom: 9px;
+  }
+
   @media (max-width: 767px) {
     width: 30px;
     height: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
   }
 }
