--- a/source/sass/blocks/contacts-section.scss
+++ b/source/sass/blocks/contacts-section.scss
@@ -32,6 +32,12 @@
   height: 15px;
   background-color: inherit;
 
+  &.no-js {
+    &::after {
+      display: none;
+    }
+  }
+
   &::before {
     content: '';
     position: absolute;
@@ -105,6 +111,14 @@
 
   @media (max-width: 767px) {
     display: none;
+
+    &.no-js {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 0 25px 20px 25px;
+      gap: 10px;
+    }
 
     &--is-open {
       display: flex;
