--- a/source/sass/blocks/nav-section.scss
+++ b/source/sass/blocks/nav-section.scss
@@ -12,6 +12,10 @@
     border-top: 1px solid rgba(248, 253, 255, 0.7);
     border-bottom: 1px solid rgba(248, 253, 255, 0.7);
   }
+
+  .no-js {
+    display: flex;
+  }
 }
 
 .nav-section__title-wrapper {
@@ -46,6 +50,12 @@
   width: 15px;
   height: 15px;
   background-color: inherit;
+
+  &.no-js {
+    &::after {
+      display: none;
+    }
+  }
 
   &::before {
     content: '';
@@ -106,6 +116,14 @@
 
   @media (max-width: 767px) {
     display: none;
+
+    &.no-js {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      gap: 10px;
+      padding: 0 25px 20px 25px;   
+    }
 
     &--is-open {
       display: flex;
