--- a/source/sass/blocks/contacts-section.scss
+++ b/source/sass/blocks/contacts-section.scss
@@ -73,6 +73,7 @@
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-size: 15px;
   line-height: 16px;
+  letter-spacing: 0.05em;
   font-weight: 400;
   color: $color-default-white;
   text-transform: uppercase;
