--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -7,7 +7,7 @@
   }
 
   @media (max-width: 767px) {
-    padding: 50px 25px 86px 25px;
+    padding: 47px 25px 88px 25px;
   }
 }
 
@@ -53,7 +53,7 @@
 
   @media (max-width: 767px) {
     margin-bottom: 25px;
-    width: auto;
+    width: 260px;
     font-size: 28px;
     line-height: 40px;
   }
