--- a/source/sass/blocks/benefit-item.scss
+++ b/source/sass/blocks/benefit-item.scss
@@ -5,14 +5,14 @@
   min-width: 332px;
   min-height: 300px;
   height: 100%;
-  padding: 40px 45px 35px 45px;
+  padding: 40px 35px 35px 45px;
   border: 1px solid $light-grey;
 
   h2 {
     font-family: "Roboto Condensed", "Arial", sans-serif;
     font-weight: 400;
     width: 100%;
-    font-size: 22px;
+    font-size: 24px;
     line-height: 34px;
     color: $base-blue;
     margin-bottom: 15px;
@@ -57,8 +57,11 @@
   }
 
   @media (max-width: 767px) {
-    padding: 25px 30px 70px 30px;
-    min-height: 325px;
+    padding: 30px 30px 35px 30px;
+    min-height: 340px;
+    &:nth-child(n + 3) {
+      min-height: 325px;
+    }
 
     h2 {
       font-size: 20px;
