--- a/source/sass/blocks/feedback-form-section.scss
+++ b/source/sass/blocks/feedback-form-section.scss
@@ -5,7 +5,7 @@
   padding-bottom: 245px;
   background-image: url("../img/bg-form.png");
   background-repeat: no-repeat;
-  background-size: 50% 100%;
+  background-size: 51.1% 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,19 +17,18 @@
   }
 
   h2 {
-    font-size: 32px;
+    font-size: 36px;
     line-height: 51px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     font-family: "Roboto Condensed", "Arial", sans-serif;
     font-weight: 400;
     color: $color-default-white;
-    margin-bottom: 10px;
   }
 
   p {
     font-size: 16px;
     line-height: 21px;
-    margin-bottom: 35px;
+    margin-bottom: 33px;
     color: $color-default-white;
   }
 
@@ -50,7 +49,7 @@
     padding: 45px 25px 90px 25px;
 
     h2 {
-      font-size: 28px;
+      font-size: 30px;
       line-height: 42px;
       margin-bottom: 10px;
     }
@@ -90,6 +89,7 @@
 
 .feedback-form-section__image {
   display: block;
+  transform: translateY(10px);
 
   @media (max-width: 1023px) {
     display: none;
