--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -13,8 +13,9 @@
   font-weight: 400;
   font-family: "Roboto Condensed";
   font-display: swap;
-  src: url("../fonts/roboto-condensed.woff") format("woff");
-  src: url("../fonts/roboto-condensed.woff2") format("woff2");
+  src: 
+  url("../fonts/roboto-condensed.woff2") format("woff2"),
+  url("../fonts/roboto-condensed.woff") format("woff")
 }
 
 @font-face {
@@ -22,8 +23,9 @@
   font-weight: 700;
   font-family: "Roboto Condensed";
   font-display: swap;
-  src: url("../fonts/roboto-condensed-700.woff") format("woff");
-  src: url("../fonts/roboto-condensed-700.woff2") format("woff2");
+  src: 
+  url("../fonts/roboto-condensed-700.woff2") format("woff2"),
+  url("../fonts/roboto-condensed-700.woff") format("woff")
 }
 
 @font-face {
@@ -31,8 +33,9 @@
   font-weight: 400;
   font-family: "PT Mono";
   font-display: swap;
-  src: url("../fonts/pt-mono.woff") format("woff");
-  src: url("../fonts/pt-mono.woff2") format("woff2");
+  src: 
+  url("../fonts/pt-mono.woff2") format("woff2"),
+  url("../fonts/pt-mono.woff") format("woff")
 }
 
 @font-face {
@@ -40,6 +43,8 @@
   font-weight: 400;
   font-family: "Roboto";
   font-display: swap;
-  src: url("../fonts/roboto.woff") format("woff");
-  src: url("../fonts/roboto.woff2") format("woff2");
+  src:
+  url("../fonts/roboto.woff2") format("woff2"),
+  url("../fonts/roboto.woff") format("woff")
+
 }
