--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -1,6 +1,6 @@
 .feedback-form {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 50% 50%;
   row-gap: 20px;
   column-gap: 30px;
 
@@ -55,7 +55,8 @@
     color: $color-default-white;
     background-color: $base-black-font;
     border-radius: 3px;
-    width: 265px;
+    width: 100%;
+    max-width: 265px;
     padding: 13px 25px;
     align-self: flex-start;
 
@@ -121,6 +122,7 @@
   display: flex;
   align-items: center;
   align-self: flex-end;
+  width: fit-content;
   padding-left: 10px;
 
   &:hover span {
