--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -1,6 +1,6 @@
 .feedback-form {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 1fr 1fr;
   row-gap: 20px;
   column-gap: 30px;
 
