--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -36,6 +36,7 @@
   display: flex;
   align-items: flex-start;
   gap: 0;
+  justify-content: center;
 
   @media (max-width: 1400px) {
     width: 80%;
