fixed footer layout

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,6 +1,7 @@
 .header {
   position: fixed;
-  height: 120px;
+  min-height: 120px;
+  height: fit-content;
   top: 0;
   width: 100vw;
   background: linear-gradient(180deg, #041827 84.9%, rgba(4, 24, 39, 0) 100%);
@@ -57,6 +58,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 20px 0;
 
   @media (max-width: 1400px) {
     width: 80%;
