--- a/source/sass/blocks/contacts-section.scss
+++ b/source/sass/blocks/contacts-section.scss
@@ -103,6 +103,7 @@
   display: flex;
   padding-top: 0;
   flex-direction: column;
+  flex-wrap: wrap;
   justify-content: space-between;
   gap: 5px;
 
