--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,5 +1,5 @@
 .product-card {
-  width: 100%;
+  width: 350px;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
@@ -23,6 +23,7 @@
   }
 
   @media (max-width: 1023px) {
+    width: 100%;
     &--1 {
       background-image: url("../img/card-1-tablet.jpg");
     }
