--- a/source/sass/blocks/social-links.scss
+++ b/source/sass/blocks/social-links.scss
@@ -20,6 +20,7 @@
 .social-links__list {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   gap: 15px;
   width: 150px;
   margin-bottom: 25px;
