--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -12,12 +12,12 @@
 
   @media (max-width: 1023px) {
     position: absolute;
-    height: 100px;
+    min-height: 100px;
     padding: 0 70px 0 50px;
   }
 
   @media (max-width: 767px) {
-    height: 70px;
+    min-height: 70px;
     padding: 0 35px 0 26px;
   }
 }
@@ -63,11 +63,14 @@
   @media (max-width: 1400px) {
     width: 80%;
     margin: 0 auto;
+    padding: 0;
   }
 
   @media (max-width: 1023px) {
     width: 100%;
+    padding: 0;
     padding-bottom: 5px;
+
   }
 }
 
