--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,5 +1,5 @@
 .product-card {
-  width: 350px;
+  width:calc( ( 100% - 170px ) / 3 );
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
