--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -18,7 +18,7 @@
   width: 63.5%;
   margin: 0 auto;
   justify-content: space-between;
-  row-gap: 30px;
+  gap: 85px;
 
   @media (max-width: 1400px) {
     width: 80%;
