fixed header layout

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -60,8 +60,12 @@
   justify-content: space-between;
   padding: 20px 0;
 
-  @media (max-width: 1400px) {
+  @media (max-width: 1600px) {
     width: 80%;
+  }
+
+  @media (max-width: 1400px) {
+    width: 96%;
     margin: 0 auto;
     padding: 0;
   }
