--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -56,9 +56,10 @@
   margin-right: 410px;
   margin-left: 350px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
-  padding: 20px 0;
+  padding-top: 28px;
+  padding-bottom: 32px;
 
   @media (max-width: 1600px) {
     width: 80%;
@@ -82,6 +83,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  padding-top: 4px;
   gap: 50px;
   row-gap: 0;
   width: 480px;
@@ -162,5 +164,6 @@
     margin-left: 70px;
     margin-bottom: 10px;
     letter-spacing: 0.05em;
+    margin-top: 5px;
   }
 }
