--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -93,7 +93,7 @@
     margin-bottom: 15px;
     width: auto;
     gap: 20px;
-    padding-right: 10px;
+    padding-top: 0;
   }
 
   @media (max-width: 767px) {
