--- a/source/sass/blocks/nav-section.scss
+++ b/source/sass/blocks/nav-section.scss
@@ -116,8 +116,20 @@
 }
 
 .nav-section__navigation {
-  display: block;
+  display: flex;
+  width: 470px;
+  gap: 20px;
   padding-top: 0;
+
+  @media (max-width: 1650px) {
+    flex-direction: column;
+    gap: 0;
+    width: auto;
+  }
+
+  @media (max-width: 1023px) {
+    gap: 10px;
+  }
 
   @media (max-width: 767px) {
     display: none;
@@ -144,14 +156,10 @@
   padding: 0;
   width: 470px;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 10px;
-  column-gap: 20px;
-  column-width: 230px;
-  height: 150px;
 
   @media (max-width: 1650px) {
     flex-wrap: nowrap;
